@@ -201,9 +201,11 @@ class SquidUpdate {
 		$htcpOpCLR = 4;                 // HTCP CLR
 
 		// FIXME PHP doesn't support these socket constants (include/linux/in.h)
-		define( "IPPROTO_IP", 0 );
-		define( "IP_MULTICAST_LOOP", 34 );
-		define( "IP_MULTICAST_TTL", 33 );
+		if( !defined( "IPPROTO_IP" ) ) {
+			define( "IPPROTO_IP", 0 );
+			define( "IP_MULTICAST_LOOP", 34 );
+			define( "IP_MULTICAST_TTL", 33 );
+		}
 
 		// pfsockopen doesn't work because we need set_sock_opt
 	        $conn = socket_create( AF_INET, SOCK_DGRAM, SOL_UDP );
@@ -215,6 +217,9 @@ class SquidUpdate {
 					$wgHTCPMulticastTTL );
 
 			foreach ( $urlArr as $url ) {
+				if( !is_string( $url ) ) {
+					wfDebugDieBacktrace( 'Bad purge URL' );
+				}
 				$url = SquidUpdate::expand( $url );
 				
 				// Construct a minimal HTCP request diagram
