@@ -51,6 +51,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Fix regression in autoconfirm permission check
 * (bug 3015) Add CSS ids to subcategory and page sections on category pages
 * (bug 7587) Fix erroneous id for specialpage tab, enabling informative popup
+* (bug 7599) Fix thumbnail purging, PHP notices on HTCP image page purge
 
 
 == Languages updated ==
